# discord-bot

./: .gitignore  .replit  README.md  ai_message.py  data.json  main.py  package-lock.json  package.json  pyproject.toml  replit.nix
commands/: youtube.py
lang/: en.json  lang.py  tr.json
src/: ai_message.py  extensions.py  main.py
src/chat/: message.py
src/cogs/: help.py  lang.py  music.py  settings.py  translate.py
src/commands/: help.py  lang.py  music.py
src/configs/lang/: en.xml  tr.xml
src/configs/langs/: en-US.xml  tr.xml
src/extensions/: bot.py  restarter.py
src/json/lang/: en.json  tr.json
src/lang/: en.json  lang.json  lang.py  tr.json
src/settings/: settings.py
src/utils/: __init__.py  _extensions.py  _keep_alive.py  _settings.py  bot.py  chat_bot.py  env.py  help.py  message.py  settings.py
src/utils/music/: __init__.py  _queue.py  _st.py  _ytdl.py  st.py  ytdl.py
src/utils/views/: __init__.py  _buttons.py  _dropdown.py  dropdown.py  song_buttons.py
