[tool.poetry]
name = "discord-bot-py"
version = "0.11.9"
description = ""
authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.2.2"
translators = "5.6.3"
PyNaCl = "1.5.0"
yt-dlp = "^2023.3.4"
ffmpeg = "1.4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"