[tool.poetry]
name = "discord-bot-py"
version = "0.13.4"
description = ""
authors = ["Özay Akcan <mail@ozayakcan.com.tr>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.4.6"
replit = "^4.1.2"
Flask = "^3.1.3"
urllib3 = "^2.7.0"
discord = "^2.3.2"
translators = "^6.0.4"
PyNaCl = "^1.6.2"
yt-dlp = "^2026.3.17"
ffmpeg = "^1.4"
st = "^0.0.8"
validators = "^0.35.0"
xmltodict = "^1.0.4"
lxml = "^6.1.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"